remove unused banner

--- a/themes/techcon/layout/layout.ejs
+++ b/themes/techcon/layout/layout.ejs
@@ -6,8 +6,8 @@
   <body>
     <div id="app" class="columns">
       <div class="column is-full-mobile is-8-desktop is-offset-2-desktop">
-        <!-- Banner -->
-        <%- partial('_partial/banner') %>
+        <!-- Navbar -->
+        <%- partial('_partial/nav') %>
       </div>
     </div>
   </body>
