Added basic sidebar w/ tag cloud

--- a/themes/techcon/layout/layout.ejs
+++ b/themes/techcon/layout/layout.ejs
@@ -8,6 +8,10 @@
       <div class="column is-full-mobile is-8-desktop is-offset-2-desktop">
         <!-- Navbar -->
         <%- partial('_partial/nav') %>
+        <!-- Sidebar -->
+        <div class="column is-one-quarter is-hidden-touch">
+          <%- partial('_partial/sidebar.ejs') %>
+        </div>
       </div>
     </div>
   </body>
