--- a/themes/techcon/layout/_partial/head.ejs
+++ b/themes/techcon/layout/_partial/head.ejs
@@ -2,11 +2,16 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="author" content="Michael Vinh Xuan Thanh" />
-  <meta name="description" content="TechCon.io is a public directory and website aggregating all of the world's tech conferences, large or small, into one easy, convenient location to browse and search." />
-  <meta name="keywords" content="tech,technology,software,software engineering,programming,coding,conference,conf,con,convention,docker,go,java,javascript,python,language,tool,code" />
+  <meta name="author" content="<%- config.author %>" />
+  <meta name="description" content="<%- config.description %>" />
+  <meta name="keywords" content="<%- config.keywords %>" />
   <meta name="google-site-verification" content="TODO FILL THIS IN" />
-  <title>TechCon.io - Your Tech Conference Directory</title>
+
+  <% if (page.title) { %>
+  <title><%- page.title %></title>
+  <% } else { %>
+  <title><%- config.title %> - <%- config.subtitle %></title>
+  <% } %>
 
   <!-- CSS & Scripts -->
   <%- css('css/bulma.min.css') %>
