--- a/themes/techcon/layout/layout.ejs
+++ b/themes/techcon/layout/layout.ejs
@@ -8,9 +8,15 @@
       <div class="column is-full-mobile is-8-desktop is-offset-2-desktop">
         <!-- Navbar -->
         <%- partial('_partial/nav') %>
-        <!-- Sidebar -->
-        <div class="column is-one-quarter is-hidden-touch">
-          <%- partial('_partial/sidebar.ejs') %>
+        <div class="columns">
+          <!-- Sidebar -->
+          <div class="column is-one-quarter is-hidden-touch">
+            <%- partial('_partial/sidebar.ejs') %>
+          </div>
+          <!-- Main Content -->
+          <div class="column auto">
+            <div class="container"><%- body %></div>
+          </div>
         </div>
       </div>
     </div>
