--- a/themes/techcon/source/css/main.styl
+++ b/themes/techcon/source/css/main.styl
@@ -3,4 +3,18 @@ global-reset()
 .widget-header
   border-bottom: double
 
+ul.conference-tags-list
+  display: inline-block
+  margin: 0
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+  -webkit-padding-start: 0px;
+
+li.conference-tags-list-item
+  color: color-grey
+  display: inline
+  margin-left: 8px
+
 @import "_partial/insight"
