--- a/themes/techcon/layout/layout.ejs
+++ b/themes/techcon/layout/layout.ejs
@@ -18,6 +18,9 @@
             <div class="container"><%- body %></div>
           </div>
         </div>
+
+        <!-- Footer -->
+        <%- partial('_partial/footer') %>
       </div>
     </div>
   </body>
