--- a/themes/techcon/source/css/main.styl
+++ b/themes/techcon/source/css/main.styl
@@ -3,6 +3,9 @@ global-reset()
 .widget-header
   border-bottom: double
 
+.widget-body
+  margin: 5px 0 5px 0
+
 ul.conference-tags-list
   display: inline-block
   margin: 0
