Page loading and showing posts on tags and index

--- a/themes/techcon/layout/_partial/conference.ejs
+++ b/themes/techcon/layout/_partial/conference.ejs
@@ -1,6 +1,6 @@
 <% if (preview) { %>
 <article class="media">
-  <a href="<%- url_for(post.path) %>">
+  <a href="/<%- url_for(post.path) %>">
     <figure class="media-left image">
       <img class="is-rounded" src="<%= post.thumb %>">
     </figure>
@@ -8,7 +8,7 @@
   <div class="media-content">
     <div class="content">
       <p>
-        <a href="<%- url_for(post.path) %>">
+        <a href="/<%- url_for(post.path) %>">
           <strong><%= post.title %></strong>
         </a>
         <a href="https://twitter.com/<%= post.twitter %>">
