--- a/themes/techcon/layout/_partial/nav.ejs
+++ b/themes/techcon/layout/_partial/nav.ejs
@@ -2,7 +2,7 @@
   <div class="container">
     <!-- Left side brand and burger settings -->
     <div class="navbar-brand">
-      <a class="navbar-item">
+      <a class="navbar-item" href="/">
         TechCon.io
       </a>
       <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="nav-menu">
