--- a/themes/techcon/layout/_partial/head.ejs
+++ b/themes/techcon/layout/_partial/head.ejs
@@ -14,8 +14,8 @@
   <% } %>
 
   <!-- CSS & Scripts -->
-  <%- css('css/bulma.min.css') %>
-  <%- css('css/main.css') %>
+  <base href="/">
+  <%- css([{ href: 'css/bulma.min.css', type: 'text/css' }, { href: 'css/main.css', type: 'text/css' }]) %>
 
   <!-- FontAwesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
