Added kubecon, cosmetic changes to website

--- a/themes/techcon/layout/_partial/footer.ejs
+++ b/themes/techcon/layout/_partial/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-  <div class="content has-text-centered">
+  <div class="content has-text-centered is-size-7">
     Copyright &copy; <%= new Date().getFullYear(); %> Michael Vinh Xuan Thanh. Site built with <a href="https://hexo.io/">Hexo.io</a> and <a href="https://bulma.io/">Bulma</a>.
   </div>
 </footer>
