--- a/themes/techcon/layout/_partial/conference.ejs
+++ b/themes/techcon/layout/_partial/conference.ejs
@@ -1,7 +1,7 @@
 <% if (preview) { %>
 <article class="media">
   <a href="/<%- url_for(post.path) %>">
-    <figure class="media-left image">
+    <figure class="media-left image is-128x128">
       <img class="is-rounded" src="<%= post.thumb %>">
     </figure>
   </a>
