--- a/themes/techcon/layout/_partial/sidebar.ejs
+++ b/themes/techcon/layout/_partial/sidebar.ejs
@@ -1,14 +1,18 @@
 <div class="container">
-  <div class="widget-header">
-    <span><%= __('about') %></span>
+  <div class="widget">
+    <div class="widget-header">
+      <span><%= __('about') %></span>
+    </div>
+    <div class="is-size-7 widget-body">
+      <p>TechCon.io is a simple website that lists the many tech conferences in the world in one convenient, searchable website.</p>
+    </div>
   </div>
-  <div class="is-size-7 widget-body">
-    <p>TechCon.io is a simple website that lists all of the available tech conferences in the world in one convenient location.</p>
-  </div>
-  <div class="widget-header">
-    <span><%= __('tags') %></span>
-  </div>
-  <div class="is-size-6">
-    <%- tagcloud({max_font: 16}) %>
+  <div class="widget">
+    <div class="widget-header">
+      <span><%= __('tags') %></span>
+    </div>
+    <div class="is-size-6">
+      <%- tagcloud({max_font: 16}) %>
+    </div>
   </div>
 </div>
