Finish simple tags listing page

--- a/themes/techcon/layout/_partial/sidebar.ejs
+++ b/themes/techcon/layout/_partial/sidebar.ejs
@@ -9,7 +9,7 @@
   </div>
   <div class="widget">
     <div class="widget-header">
-      <span><%= __('tags') %></span>
+      <span><%= __('tag_cloud') %></span>
     </div>
     <div class="is-size-6">
       <%- tagcloud({max_font: 16}) %>
