Cosmetic fixes to search window

--- a/themes/techcon/layout/_partial/nav.ejs
+++ b/themes/techcon/layout/_partial/nav.ejs
@@ -24,7 +24,7 @@
       </a>
       <div class="navbar-item">
         <form class="control has-icons-left">
-          <input class="input is-rounded search-field" type="search" title="Search" />
+          <input class="input is-rounded search-field" type="search" title="Search" placeholder="Search conferences..." />
           <span class="icon is-small is-left">
             <i class="fas fa-search"></i>
           </span>
