--- a/themes/techcon/source/css/main.styl
+++ b/themes/techcon/source/css/main.styl
@@ -34,5 +34,7 @@ span.tag-list-count:after
 // Misc
 .page-header
   padding-bottom: 10px
+.ins-icon
+  margin-right: 5px
 
 @import "_partial/insight"
