--- a/themes/techcon/source/css/_partial/insight.styl
+++ b/themes/techcon/source/css/_partial/insight.styl
@@ -3,7 +3,7 @@ ins-container-width = 540px
 ins-text-grey = #9a9a9a
 ins-border-grey = #e2e2e2
 ins-background-grey = #f7f7f7
-ins-background-blue = color-black
+ins-background-blue = #3273dc
 
 $ins-full-screen
     top: 0
@@ -125,8 +125,7 @@ $ins-full-screen
             margin: 5px 0 0 20px
         &:hover,
         &.active
-            color: white
-            background: ins-background-blue
+            color: ins-background-blue
             .ins-slug,
             .ins-search-preview
-                color: white
+                color: ins-background-blue
