--- a/themes/techcon/source/css/main.styl
+++ b/themes/techcon/source/css/main.styl
@@ -32,6 +32,8 @@ span.tag-list-count:after
   content: ')'
 
 // Misc
+.conference-links
+  margin-right: 5px
 .page-header
   padding-bottom: 10px
 .ins-icon
