--- a/themes/techcon/layout/index.ejs
+++ b/themes/techcon/layout/index.ejs
@@ -1,3 +1,4 @@
+<h1 class="is-size-4 page-header"><%- __('all_confs') %></h1>
 <% page.posts.each(function(post) { %>
   <%- partial('_partial/conference', {post: post, preview: true}) %>
 <% }) %>
