--- a/themes/techcon/layout/layout.ejs
+++ b/themes/techcon/layout/layout.ejs
@@ -4,7 +4,7 @@
   <%- partial('_partial/head') %>
   <!-- Body -->
   <body>
-    <div id="app" class="columns">
+    <div id="app" class="columns is-vcentered">
       <div class="column is-full-mobile is-8-desktop is-offset-2-desktop">
         <!-- Navbar -->
         <%- partial('_partial/nav') %>
@@ -18,7 +18,6 @@
             <div class="container"><%- body %></div>
           </div>
         </div>
-
         <!-- Footer -->
         <%- partial('_partial/footer') %>
       </div>
