Fix padding and responsiveness, search bar

--- a/themes/techcon/layout/_partial/head.ejs
+++ b/themes/techcon/layout/_partial/head.ejs
@@ -20,4 +20,6 @@
   <!-- FontAwesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <%- js('js/jquery-3.5.1.min.js') %>
+  <!-- Custom Site JS -->
+  <%- js('js/main.js') %>
 </head>
