--- a/themes/techcon/layout/layout.ejs
+++ b/themes/techcon/layout/layout.ejs
@@ -4,7 +4,8 @@
   <%- partial('_partial/head') %>
   <!-- Body -->
   <body>
-    <div id="app" class="columns is-vcentered">
+    <div id="app" class="section">
+    <div class="columns is-vcentered">
       <div class="column is-full-mobile is-8-desktop is-offset-2-desktop">
         <!-- Navbar -->
         <%- partial('_partial/nav') %>
@@ -21,6 +22,7 @@
         <!-- Footer -->
         <%- partial('_partial/footer') %>
       </div>
+    </div>
     </div>
   </body>
 </html>
